# embarca-tech

./: README.md
Introduction-C/: power.c
Introduction-C/Giraffe/: employess.txt  first.c
Raspberry-pi-pico/MyExamples/blink/: CMakeLists.txt  blink.c
Raspberry-pi-pico/MyExamples/btncont/: CMakeLists.txt  btncont.c
Raspberry-pi-pico/MyExamples/btnled/: CMakeLists.txt  btnled.c
Raspberry-pi-pico/MyExamples/cont/: CMakeLists.txt  cont.c
Raspberry-pi-pico/MyExamples/display_oled/: CMakeLists.txt  display_oled.c
Raspberry-pi-pico/MyExamples/modelDefault/: CMakeLists.txt  modelDefault.c  pico_sdk_import.cmake
Raspberry-pi-pico/MyExamples/projetoET/: CMakeLists.txt  Readme.md  projetoET.c
Raspberry-pi-pico/MyExamples/projeto_embarcatech/: CMakeLists.txt  projeto_embarcatech.c
Raspberry-pi-pico/MyExamples/safe/: CMakeLists.txt  safe.c
Raspberry-pi-pico/MyExamples/temporizador/: CMakeLists.txt  temporizador.c
Raspberry-pi-pico/MyExamples/trafficlight/: CMakeLists.txt  trafficlight.c
